# CSE4037-project

./: .dockerignore  .gitignore  PRESENTATION_SCRIPT.md  docker-compose.yml  package.json  turbo.json
application/: Dockerfile  package.json  tsconfig.json  vite.config.ts
application/src/: main.tsx  server.ts  styles.css
application/src/components/: header.tsx
application/src/db/: index.ts
application/src/lib/: api.ts  index.ts
application/src/routes/: index.tsx
engine/: .dockerignore  Cargo.toml  Dockerfile  package.json
engine/src/: board.rs  eval.rs  handlers.rs  main.rs  mcts.rs  minimax.rs  model.rs
engine/train/: encode.py  mcts.py  model.py  pyproject.toml  self_play.py  train.py  train.sh
