[package]
name = "chess"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.1"
actix-web = "4.4.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
shakmaty = "0.26"
rand = "0.8"
# ONNX Runtime bindings with CUDA.
# load-dynamic avoids compile-time binary download (no OpenSSL/pkg-config needed).
# At runtime, set ORT_DYLIB_PATH=/path/to/libonnxruntime.so (CUDA-enabled build).
# See: https://ort.pyke.io/setup/loading
ort = { version = "=2.0.0-rc.10", default-features = false, features = ["load-dynamic"] }
ort-sys = "=2.0.0-rc.10"
ndarray = "0.16"
once_cell = "1"
